--- a/packages/optimism.io/public/index.html
+++ b/packages/optimism.io/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Optimism is a Public Benefit Corporation dedicated to scaling Ethereum."
     />
+    <script async defer data-domain="optimism.io" src="https://plausible.io/js/plausible.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
