Homepage: discord link meta title (#15)

--- a/packages/optimism.io/public/discord.html
+++ b/packages/optimism.io/public/discord.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="https://optimism.io/discord" />
-    <meta name="twitter:title" content="Optimism Workshop @ Scaling Ethereum" />
+    <meta name="twitter:title" content="Optimism Discord" />
     <meta name="twitter:description" content="Optimism Discord" />
     <meta
       name="twitter:image"
