--- a/packages/gateway.optimism.io/public/index.html
+++ b/packages/gateway.optimism.io/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The space elevator to Optimistic Ethereum" />
+    <meta name="theme-color" content="#f01a37" />
+    <meta name="description" content="Optimistic Ethereum layer 2 space elevator" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="https://gateway.optimism.io/social-card-dark.png" />
+    <meta name="twitter:site" content="https://gateway.optimism.io" />
     <meta name="twitter:title" content="Optimism Gateway" />
-    <meta name="twitter:description" content="The space elevator to Optimistic Ethereum" />
-    <meta name="twitter:image" content="https://i.imgur.com/U4HcwqQ.png" />
+    <meta name="twitter:description" content="Optimistic Ethereum layer 2 space elevator" />
+    <meta name="twitter:image" content="https://gateway.optimism.io/social-card-dark.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
