Homepage: Navigation styles fix and meta tags (#31)
* Adds Popover global styles

* Fixes navigation Popover width and adds meta tags

* Fixes meta card link

--- a/packages/gateway.optimism.io/public/index.html
+++ b/packages/gateway.optimism.io/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f01a37" />
+    <meta name="theme-color" content="#FF0420" />
     <meta name="description" content="Your gateway to Optimistic Ethereum" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="https://gateway.optimism.io" />
