--- a/packages/optimism.io/public/index.html
+++ b/packages/optimism.io/public/index.html
@@ -4,12 +4,28 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FF0420" />
     <meta
       name="description"
-      content="Optimism is a Public Benefit Corporation dedicated to scaling Ethereum."
+      content="Optimism is a Public Benefit Corporation dedicated to scaling Ethereum"
     />
-    <script async defer data-domain="optimism.io" src="https://plausible.io/js/plausible.js"></script>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://optimism.io" />
+    <meta name="twitter:title" content="Optimism" />
+    <meta
+      name="twitter:description"
+      content="Optimism is a Public Benefit Corporation dedicated to scaling Ethereum"
+    />
+    <meta
+      name="twitter:image"
+      content="https://optimism.io/images/social-card-dark.png"
+    />
+    <script
+      async
+      defer
+      data-domain="optimism.io"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
